Break up words to prevent thumbnails from being squished
Bug: T321362

--- a/skinStyles/mediawiki.special.search.styles/minerva.less
+++ b/skinStyles/mediawiki.special.search.styles/minerva.less
@@ -18,6 +18,13 @@
 	display: none;
 }
 
+// some of the content is extremely long and trying to keep
+// as much as possible on 1 line causes breaking other
+// parts (notably: thumbnails end up being squished)
+.searchResultImage-text {
+	word-break: break-word;
+}
+
 // override ul padding-left defined in lists.less, which isn't
 // meant to affect the search results list
 .content ul.mw-search-results {
